function variation & iterations

--- a/index1.html
+++ b/index1.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     
+    <p>currying / uncurring function</p>
+    <p>self invoke function</p>
+    <p>generator function</p>
+
+    <h1>data structure</h1>
+
+    <p>array</p>
+    <p>object</p>
+    <p>iteration</p>
 
 
     <script src="./script1.js"></script>
