--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello</p>
+    <h1>es6 edition</h1>
+    <p>spread operator</p>
+    <p>rest operator</p>
+
+    <p>destracture</p>
+
+    <p>array manipulate method</p>
 
  <script src="./script.js"></script>  
 </body>
