--- a/index1.html
+++ b/index1.html
@@ -7,15 +7,13 @@
 </head>
 <body>
     
-    <p>currying / uncurring function</p>
-    <p>self invoke function</p>
-    <p>generator function</p>
+    <h1>es6 edition</h1>
+    <p>spread operator</p>
+    <p>rest operator</p>
 
-    <h1>data structure</h1>
+    <p>destracture</p>
 
-    <p>array</p>
-    <p>object</p>
-    <p>iteration</p>
+    <p>array manipulate method</p>
 
 
     <script src="./script1.js"></script>
