--- a/index1.html
+++ b/index1.html
@@ -7,14 +7,32 @@
 </head>
 <body>
     
-    <h1>es6 edition</h1>
-    <p>spread operator</p>
-    <p>rest operator</p>
+    
+     <p>higher order function</p>
 
-    <p>destracture</p>
+    <ul>
+        <li>sort</li>
+        <li>some</li>
+        <li>every</li>
+    </ul>
 
-    <p>array manipulate method</p>
+    <p>string methods</p>
 
+    <ul>
+        <li>charAt</li>
+        <li>charCodeAt</li>
+        <li>includes</li>
+        <li>indexOf</li>
+        <li>lastIndexOf</li>
+        <li>repeat</li>
+        <li>replace</li>
+        <li>slice</li>
+        <li>split</li>
+        <li>startswidth</li>
+        <li>endswidth</li>
+        <li>lowercase</li>
+        <li>upperCase</li>
+    </ul>
 
     <script src="./script1.js"></script>
 </body>
