--- a/index1.html
+++ b/index1.html
@@ -8,31 +8,9 @@
 <body>
     
     
-     <p>higher order function</p>
+    <h2>Math Method</h2>
 
-    <ul>
-        <li>sort</li>
-        <li>some</li>
-        <li>every</li>
-    </ul>
-
-    <p>string methods</p>
-
-    <ul>
-        <li>charAt</li>
-        <li>charCodeAt</li>
-        <li>includes</li>
-        <li>indexOf</li>
-        <li>lastIndexOf</li>
-        <li>repeat</li>
-        <li>replace</li>
-        <li>slice</li>
-        <li>split</li>
-        <li>startswidth</li>
-        <li>endswidth</li>
-        <li>lowercase</li>
-        <li>upperCase</li>
-    </ul>
+    <h2>date object</h2>
 
     <script src="./script1.js"></script>
 </body>
