promise / dom selecting

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 <body>
     
 
-    <h2>math object</h2>
-    <h2>date object</h2>
-    
+    <h1>Dom</h1>
 
+    <p class="one">hello</p>
+    <p id="two">how</p>
+
+    <h2>h2 element</h2>
+    <div class="three q">three</div>
+    <div id="four" class="q">four</div>
 
  <script src="./script.js"></script>  
 </body>
