--- a/index1.html
+++ b/index1.html
@@ -6,11 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
-    
-    <h2>Math Method</h2>
+   
+    <h1>DOM</h1>
+    <div class="one">hello</div>
+    <div id="two">how are</div>
 
-    <h2>date object</h2>
+    <h2>Document</h2>
+    <div class="three">Three</div>
+    <div id="four">four</div>
 
     <script src="./script1.js"></script>
 </body>
