--- a/index.html
+++ b/index.html
@@ -4,19 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+<!--     
+<input type="text"> <button>save</button>
+<ol>
+   
+</ol> -->
+
+<div class="calculator">
+    <input type="text" readonly>
+    <button type="button" onclick="add1('%')">%</button>
+    <button type="button" onclick="removeAll()">c</button>
+    <button type="button" onclick="delLast()">del</button>
+    <button type="button" onclick="add1('/')">/</button>
+    <button type="button" onclick="add1('7')">7</button>
+    <button type="button" onclick="add1('8')">8</button>
+    <button type="button" onclick="add1('6')">6</button>
+    <button type="button" onclick="add1('*')">*</button>
+    <button type="button" onclick="add1('4')">4</button>
+    <button type="button" onclick="add1('5')">5</button>
+    <button type="button" onclick="add1('6')">6</button>
+    <button type="button" onclick="add1('-')">-</button>
+    <button type="button" onclick="add1('1')">1</button>
+    <button type="button" onclick="add1('2')">2</button>
+    <button type="button" onclick="add1('3')">3</button>
+    <button type="button" onclick="add1('+')">+</button>
+    <button type="button" onclick="add1('00')">00</button>
+    <button type="button" onclick="add1('0')">0</button>
+    <button type="button" onclick="add1('.')">.</button>
+    <button type="button" class="equal" onclick="final()">=</button>
+</div>
+
+
     
-
-    <h1>Dom</h1>
-
-    <p class="one">hello</p>
-    <p id="two">how</p>
-
-    <h2>h2 element</h2>
-    <div class="three q">three</div>
-    <div id="four" class="q">four</div>
-
  <script src="./script.js"></script>  
 </body>
 </html>
