--- a/index1.html
+++ b/index1.html
@@ -4,16 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style1.css">
 </head>
 <body>
-   
-    <h1>DOM</h1>
-    <div class="one">hello</div>
-    <div id="two">how are</div>
+    <!-- text element text element text -->
+    <!-- <input type="text"><button>save</button>
+    <ol>
+        
+    </ol> -->
 
-    <h2>Document</h2>
-    <div class="three">Three</div>
-    <div id="four">four</div>
+    <div class="calculator">
+        <input type="text" readonly>
+        <button type="button" onclick="add1('%')">%</button>
+        <button type="button" onclick="removeAll()">c</button>
+        <button type="button" onclick="lastRemove()">Del</button>
+        <button type="button" onclick="add1('/')">/</button>
+        <button type="button" onclick="add1('7')">7</button>
+        <button type="button" onclick="add1('8')">8</button>
+        <button type="button" onclick="add1('9')">9</button>
+        <button type="button" onclick="add1('*')">*</button>
+        <button type="button" onclick="add1('4')">4</button>
+        <button type="button" onclick="add1('5')">5</button>
+        <button type="button" onclick="add1('6')">6</button>
+        <button type="button" onclick="add1('-')">-</button>
+        <button type="button" onclick="add1('1')">1</button>
+        <button type="button" onclick="add1('2')">2</button>
+        <button type="button" onclick="add1('3')">3</button>
+        <button type="button" onclick="add1('+')">+</button>
+        <button type="button" onclick="add1('00')">00</button>
+        <button type="button" onclick="add1('0')">0</button>
+        <button type="button" onclick="add1('.')">.</button>
+        <button type="button" onclick="final()" class="equal">=</button>
+    </div>
+
+    <h1>hello</h1>
+    <button class="added">change style</button>
 
     <script src="./script1.js"></script>
 </body>
